Fix 100vh issues on mobile by adding 100svh

--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -4,6 +4,7 @@
   top: 0;
   z-index: -2;
   min-height: 100vh;
+  min-height: 100svh;
   width: 100%;
 }
 
