--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -1,5 +1,6 @@
 .hc {
   height: 100vh;
+  height: 100svh;
   width: 100%;
   position: absolute;
   top: 0;
@@ -15,6 +16,7 @@
 .shapes-cont {
   width: 100%;
   height: 100vh;
+  height: 100svh;
   position: fixed;
   top: 0;
   z-index: -1;
